creusot/tests/should_fail/unsupported/binary_operations.stderr
warning: function `bit_and` is never used
 --> binary_operations.rs:3:4
  |
3 | fn bit_and(a: u32, b: u32) -> u32 {
  |    ^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: function `bit_or` is never used
 --> binary_operations.rs:7:4
  |
7 | fn bit_or(a: u32, b: u32) -> u32 {
  |    ^^^^^^

warning: function `bit_xor` is never used
  --> binary_operations.rs:11:4
   |
11 | fn bit_xor(a: u32, b: u32) -> u32 {
   |    ^^^^^^^

error: bitwise operations are currently unsupported
 --> binary_operations.rs:4:5
  |
4 |     a & b
  |     ^^^^^

error: aborting due to 1 previous error; 3 warnings emitted

